--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
         <div class="home-content">
             <h1>Hi, I'm <span>Dinh Truong</span></h1>
             <div class="text-animate">
-                <h3>Data Engineer</h3>
+                <h3>AI / Data Engineer</h3>
             </div>
             <p>I'm currently a student at Hanoi University of Science and Technology. My major is 
             Data Science & AI. I'm generally a serious, highly disciplined, and responsible person. 
