--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 
         <nav class="navbar">
             <a href="#home" class="active">Home</a>
-            <a href="" class="">Blog</a>
+            <a href="https://dtruong46me.github.io/blog" class="">Blog</a>
             <a href="#about">About</a>
             <a href="#education">Education</a>
             <a href="#projects">Projects</a>
