--- a/contact.html
+++ b/contact.html
@@ -2,3 +2,16 @@
 layout: tags
 title: Contact
 ---
+
+<h2>My Contact</h2>
+
+<p>
+Ask me anything!
+</p>
+
+<ul>
+    <li>Email: <a href="dtruong46.me@gmail.com">dtruong46.me@gmail.com</a></li>
+    <li>Linkedin: <a href="https://linkedin.com/dtruong46me">Dinh Truong Phan</a></li>
+    <li>Facebook: <a href="https://facebook.com/dtruong46.me/">Đình Trường</a></li>
+    <li>Youtube: <a href="https://ww.youtube.com/@dingzhang46">Ding Zhang DTP</a></li>
+</ul>
