--- a/contact.html
+++ b/contact.html
@@ -10,8 +10,8 @@ Ask me anything!
 </p>
 
 <ul>
-    <li>Email: <a href="dtruong46.me@gmail.com">dtruong46.me@gmail.com</a></li>
-    <li>Linkedin: <a href="https://linkedin.com/dtruong46me">Dinh Truong Phan</a></li>
-    <li>Facebook: <a href="https://facebook.com/dtruong46.me/">Đình Trường</a></li>
-    <li>Youtube: <a href="https://ww.youtube.com/@dingzhang46">Ding Zhang DTP</a></li>
+    <li>Email: <a href="https://mail.google.com/mail/u/0/#inbox?compose=DmwnWrRmTgXbzvLTrXZdJPrZvVCHmJzlPJJvqHtMJLrHjMGsqgXGsHxRcwvwDdjkMfRjBdLZDhmQ">dtruong46.me@gmail.com</a></li>
+    <li>Linkedin: <a href="https://www.linkedin.com/in/dtruong46me/">Dinh Truong Phan</a></li>
+    <li>Facebook: <a href="https://www.facebook.com/dtruong46.me/">Đình Trường</a></li>
+    <li>Youtube: <a href="https://www.youtube.com/@dingzhang46">Ding Zhang DTP</a></li>
 </ul>
